1. drop verify code. 2. fix k8s pod name. 3. remove Region